fix data contract card spacing

--- a/packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
+++ b/packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
@@ -33,6 +33,7 @@
     font-size: 14px;
     line-height: 120%;
     text-transform: uppercase;
+    margin: 0 0 22px;
   }
 
   &__HeaderLines {
